--- a/general.css
+++ b/general.css
@@ -169,11 +169,12 @@ h6 {
   gap: 10rem;
   align-items: center;
   background-color: var(--accent-color);
-  height: 90vh;
+  height: 95vh;
   scroll-margin-top: 8rem;
 }
 .hero-content {
   display: flex;
+  padding-top: 10rem;
   justify-content: space-between;
   gap: 10rem;
   align-items: center;
@@ -219,7 +220,7 @@ h6 {
   grid-template-columns: repeat(4, 1fr);
   gap: 2rem;
   position: absolute;
-  bottom: -10rem;
+  bottom: -12rem;
   width: 100%;
 }
 
@@ -488,11 +489,11 @@ h6 {
 }
 .happy-text {
   font-size: 1.7rem;
-  color: var(--default-color);
+  color: color-mix(in srgb, var(--default-color) 95%, transparent 30%);
 }
 .happy-txt {
   font-weight: 600;
-  color: var(--background);
+  color: color-mix(in srgb, var(--default-color) 95%, transparent 30%);
 }
 
 .cta {
@@ -518,11 +519,12 @@ h6 {
   color: var(--background-color);
   font-size: 25px;
   text-align: center;
-  margin-bottom: 1rem;
+  margin-bottom: 3rem;
 }
 .ctaText {
-  text-align: center;
+  font-family: var(--default-font);
   font-size: 18px;
+  line-height: 2.4rem;
   color: var(--background-color);
 }
 .ctaLink:link,
@@ -543,7 +545,7 @@ h6 {
 .ctaLink:hover,
 .ctaLink:visited {
   background-color: var(--accent-color);
-border: none;
+  border: none;
   border-style: hidden hidden;
 }
 
@@ -556,8 +558,7 @@ border: none;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 2rem;
-  /* background-color: color-mix(in srgb, var(--background-color) 100%, black 2%); */
-  
+  padding: 2rem 3rem;
 }
 .serviceInfo {
   background-color: var(--background-color);
@@ -574,21 +575,17 @@ border: none;
   position: absolute;
   width: 4rem;
   height: 4rem;
-  /* top: 0; */
   left: 5rem;
   bottom: 18rem;
   border-radius: 50%;
-  /* background-color: red; */
   background-color: whitesmoke;
   opacity: 0.9;
   transition: all 0.4s;
 }
 
-
-.serviceInfoBox .serviceInfo:hover:before{
-  opacity: 0.7;  
+.serviceInfoBox .serviceInfo:hover:before {
+  opacity: 0.7;
   background-color: #008374;
-  
 }
 .serviceIcon {
   font-size: 40px;
@@ -603,24 +600,42 @@ border: none;
   transition: 0.4s;
 }
 .serviceInfo::after {
-  
   content: "";
   position: absolute;
-  width: 30%;
+  width: 31%;
   height: 5px;
   bottom: 11rem;
-  left: 23%;
+  left: 22.7%;
   transform: translate(-50%);
-  /* border-radius 50%; */
- background-color: whitesmoke;
+  background-color: whitesmoke;
   opacity: 0.9;
   transition: all 0.4s;
 }
 
-.serviceInfoBox .serviceInfo:hover:after{
-  opacity: 0.7;  
-  background-color: #008374;
+.b::after {
+  width: 32.2%;
+}
+.c::after {
+  width: 19%;
+  transform: translate(-82%);
   
+}
+.d::after {
+  width: 24%;
+  transform: translate(-67%);
+}
+.e::after {
+  width: 24%;
+  transform: translate(-67%);
+}
+.f::after {
+  width: 24%;
+  transform: translate(-67%);
+}
+
+.serviceInfoBox .serviceInfo:hover:after {
+  opacity: 0.7;
+  background-color: #008374;
 }
 .serviceText {
   font-size: 16px;
@@ -637,10 +652,14 @@ border: none;
 }
 
 /* TESTIMONAIL SECTION START  */
+.testimonial{
+  background-color: whitesmoke;
+height: 100dvh;
+}
+
 swiper-container {
   width: 100%;
- background-color: whitesmoke;
-  height: 60vh;
+  height: 70dvh;
 }
 
 swiper-slide {
@@ -651,17 +670,16 @@ swiper-slide {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 45vh;
-
+  height: 60vh;
 }
-.slider{
+.slider {
   background-color: var(--background-color);
   padding: 5rem 2rem;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  height: 40dvh;
+  height: 100%;
   transition: 0.4s;
 }
 .slideImg {
@@ -692,7 +710,181 @@ swiper-slide {
   font-style: italic;
   text-align: left;
 }
+.sky{
+  color: var(--accent-color);
+}
 .swiper-pagination-bullet {
   background-color: var(--accent-color);
   color: #008374;
+}
+
+/* CONTACT SECTION START  */
+.contact {
+  scroll-margin-top: 8rem;
+  width: 100%;
+  padding: 1rem;
+}
+.contact-box {
+  display: grid;
+  grid-template-columns: 1.5fr 3fr;
+  gap: 0;
+  width: 100%;
+
+}
+
+.contact-address {
+  display: flex;
+  flex-direction: column;
+  border: 3px solid var(--accent-color);
+  border-style: solid hidden;
+  padding: 3rem;
+  box-shadow: 1px 1px 10px 1px rgba(0, 0, 0, 0.1);
+  background-color: var(--accent-color);
+  border-radius: 5px;
+}
+.fill{
+  background-color: var(--background-color);
+}
+.map {
+  width: 100%;
+  height: 30vh;
+}
+.contact-address-box {
+  display: flex;
+  gap: 1rem;
+  margin-bottom: 3rem;
+  background-color: color-mix(in srgb, var(--accent-color) 100%, white 15%);
+  box-shadow: 1px 1px 10px 1px rgba(0, 0, 0, 0.1);
+  padding: 2rem;
+  transition: all 0.4s;
+}
+
+.contact-icon {
+  padding: 1rem;
+  font-size: 2rem;
+  border-radius: 50%;
+  color: var(--background-color);
+  background-color: color-mix(in srgb, var(--accent-color) 100%, white 75%);
+}
+.contact-address-box .contact-icon:hover {
+  color: var(--accent-color);
+  background-color: var(--background-color);
+}
+
+
+.contact-name {
+  font-size: 2rem;
+    color: var(--background-color);
+    font-family: var(--heading-font);
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+.contact-article {
+  font-size: 15px;
+  font-family: var(--default-font);
+  color: var(--background-color);
+}
+
+.contact-image {
+  width: 100%;
+}
+
+.contact-info-box {
+  display: flex;
+  gap: 2rem;
+}
+
+.contact-info {
+  width: 100%;
+  padding: 1rem 2rem;
+  margin-bottom: 3rem;
+  border: 1px solid lightblue;
+  outline: none;
+}
+
+.contact-info-text {
+  padding: 1rem 2rem;
+  width: 100%;
+  height: 20rem;
+  border: 1px solid lightblue;
+  margin-bottom: 2rem;
+  outline: none;
+}
+
+.contact-btn {
+  margin: auto;
+  padding: 1rem 2rem;
+  border-radius: 2rem;
+  font-size: 15px;
+  border: none;
+  background-color: var(--accent-color);
+  color: var(--background-color);
+  outline: none;
+}
+
+
+/* FOOTER SECTION START  */
+.footer {
+  margin: auto;
+  display: grid;
+  grid-template-columns: 3fr 1fr 1fr 1.5fr;
+  gap: 2rem;
+  background-color: var(--accent-color);
+color: var(--background-color);  
+}
+.footLogo {
+color: var(--background-color);  
+  font-size: 25px;
+  margin-bottom: 15px;
+}
+.footHeader {
+color: var(--background-color);  
+  font-size: 20px;
+  margin-bottom: 1rem;
+}
+.footText {
+color: color-mix(in srgb, whitesmoke 90%, transparent 50%);
+font-weight: 200;  
+font-family: var(--default-font);
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  margin-bottom: 15px;
+  cursor: pointer;
+  text-decoration: none;
+  /* color: var(--default-color); */
+}
+.fis .footText{
+  color: var(--background-color);
+  font-weight: 400;
+}
+.fts{
+  margin-bottom: 4rem;
+}
+.footLinkIcon{
+  color: var(--accent-color);
+}
+.footBold {
+  font-weight: 600;
+}
+.footIcon {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+.foot-icon {
+  border: 1px solid color-mix(in srgb, var(--background-color) 100%, transparent 90%);
+  padding: 1rem;
+  border-radius: 50%;
+  font-size: 18px;
+color: color-mix(in srgb, var(--background-color) 100%, transparent 90%);
+
+  /* color: var(--default-color); */
+  transition: 0.3s;
+}
+.foot-icon:hover {
+  background-color: var(--accent-color);
+  color: white;
+  border: none;
 }
